--- a/app.json
+++ b/app.json
@@ -30,6 +30,8 @@
     "pages/shopArrange/shopArrange",
     "pages/timePicker/timePicker",
     "pages/pointsHistory/pointsHistory",
+    "pages/recharge/recharge",
+    "pages/byStages/byStages",
     "pages/debt/debt"
   ],
   "window": {
